# Satellite-fetcher

./: .env.example  .gitignore  Dockerfile  README.md  cli.py  config_copy.yaml  docker-compose.yml  example_aoi.wkt  podman-compose.yml  pyproject.toml  requirements.txt  satellite-fetcher.py  test.py  usgs-example.py
_leaflet_comp/: index.html
aoi/: aoi_20260212_105222.wkt  aoi_20260212_110727.wkt  aoi_20260212_111023.wkt
copernicus_downloader/: __init__.py  downloader.py
docs/: API_REFERENCE.md  COMPLETE_GUIDE_FR.md  DEPLOYMENT_3_LAYER.md  KUBERNETES_DEPLOYMENT.md  README.md  REPOSITORY_GUIDE.md  copernicus_collections.md  future_ideas.md  google_earth_engine.md  index.md  integration_streamlit.md  usgs_collections.md
k8s/: api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap.yaml  downloads-pvc.yaml  kustomization.yaml  mongodb-service.yaml  mongodb-statefulset.yaml  namespace.yaml  secret.yaml  ui-deployment.yaml  ui-service.yaml  worker-deployment.yaml  worker-hpa.yaml
k8s-minikube/: kustomization.yaml  patch-api-deployment.yaml  patch-api-hpa.yaml  patch-downloads-pvc.yaml  patch-mongodb-statefulset.yaml  patch-worker-deployment.yaml  patch-worker-hpa.yaml  pv-downloads.yaml  pv-mongodb.yaml
notebooks/: dev.ipynb  download.grib
providers/: __init__.py  cds.py  copernicus.py  google_earth_engine.py  modis.py  open_topography.py  provider_base.py  usgs.py
scripts/: 00_check_podman.sh  01_test_models.sh  02_test_engine.sh  05_test_all.sh  06_benchmark_morocco_copernicus_1y.sh  07_morocco_3days_sequential.sh  08_morocco_3days_parallel.sh  (+12 more)
(+85 files in other folders)
